--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
 <h1 id="heading">String Methods</h1>
-<script src="string_methods.js"></script>
+<ul id="list"></ul>
+<script src="array_methods.js"></script>
