--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <h1 id="heading">String Methods</h1>
 <ul id="list"></ul>
-<script src="array_methods.js"></script>
+<script src="object_methods.js"></script>
